--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -92,7 +92,7 @@ QTabBar::tab:!selected:hover
 </string>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <property name="styleSheet">
@@ -145,8 +145,19 @@ QTabBar::tab:!selected:hover
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);
-</string>
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
       </property>
       <property name="text">
        <string>Add</string>
@@ -509,7 +520,7 @@ QTabBar::tab:!selected:hover
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">QTableView {border: 3px solid #5E749C;text-align: top;padding: 4px;border-radius: 7px;border-bottom-left-radius: 7px;background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0,stop: 0 #fff, stop: 1 #eee,stop: 0.5 #ddd,stop: 1 #eee );width: 15px;}
+       <string notr="true">QTableView {border: 3px solid #C8952F;text-align: top;padding: 4px;border-radius: 7px;border-bottom-left-radius: 7px;background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0,stop: 0 #fff, stop: 1 #eee,stop: 0.5 #ddd,stop: 1 #eee );width: 15px;}
 QTableView::item:focus{selection-background-color: yellow;}
 
 
@@ -518,7 +529,7 @@ QTableView::item:focus{selection-background-color: yellow;}
  }
 
  QScrollBar:vertical {
-     border: 3px solid #5E749C;
+     border: 3px solid #C8952F;
      padding: 4px;
      border-radius: 7px;
      border-bottom-left-radius: 7px;
@@ -528,16 +539,16 @@ QTableView::item:focus{selection-background-color: yellow;}
  }
 
  QScrollBar::handle:vertical {
-     background: dark blue;
-     border: 3px solid #5E749C;
+     background: #C8952F;
+     border: 3px solid #C8952F;
      padding: 0px;
      border-radius: 7px;
      border-bottom-left-radius: 7px;
      min-height: 40px;
  }
  QScrollBar::add-line:vertical {
-     background: dark blue;
-     border: 3px solid #5E749C;
+     background: #C8952F;
+     border: 3px solid #C8952F;
      padding: 0px;
      border-radius: 7px;
      border-bottom-left-radius: 7px;
@@ -547,8 +558,8 @@ QTableView::item:focus{selection-background-color: yellow;}
  }
 
  QScrollBar::sub-line:vertical {
-     background: dark blue;
-     border: 3px solid #5E749C;
+     background: #C8952F;
+     border: 3px solid #C8952F;
      padding: 0px;
      border-radius: 7px;
      border-bottom-left-radius: 7px;
@@ -568,7 +579,7 @@ QTableView::item:focus{selection-background-color: yellow;}
  }</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="trier">
+     <widget class="QPushButton" name="sortByType">
       <property name="geometry">
        <rect>
         <x>180</x>
@@ -578,13 +589,26 @@ QTableView::item:focus{selection-background-color: yellow;}
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}
+</string>
       </property>
       <property name="text">
-       <string>sort by type</string>
+       <string>Sort by type</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="tri_stock">
+     <widget class="QPushButton" name="sortById">
       <property name="geometry">
        <rect>
         <x>40</x>
@@ -594,13 +618,25 @@ QTableView::item:focus{selection-background-color: yellow;}
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
       </property>
       <property name="text">
-       <string>sort by name</string>
+       <string>Sort by id</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="trier_2">
+     <widget class="QPushButton" name="sortByPrice">
       <property name="geometry">
        <rect>
         <x>360</x>
@@ -610,14 +646,26 @@ QTableView::item:focus{selection-background-color: yellow;}
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}
 </string>
       </property>
       <property name="text">
-       <string>sort by buyer</string>
+       <string>Sort by price</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="rechercher_2">
+     <widget class="QPushButton" name="searchnum">
       <property name="geometry">
        <rect>
         <x>400</x>
@@ -627,7 +675,19 @@ QTableView::item:focus{selection-background-color: yellow;}
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
       </property>
       <property name="text">
        <string>Search</string>
@@ -661,7 +721,7 @@ QTableView::item:focus{selection-background-color: yellow;}
        <string>Number to find</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="le_num">
+     <widget class="QLineEdit" name="numtosearch">
       <property name="geometry">
        <rect>
         <x>240</x>
@@ -702,7 +762,7 @@ QTableView::item:focus{selection-background-color: yellow;}
        <string>Type to find</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="chercher_name">
+     <widget class="QLineEdit" name="typetosearch">
       <property name="geometry">
        <rect>
         <x>240</x>
@@ -715,7 +775,7 @@ QTableView::item:focus{selection-background-color: yellow;}
        <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="rechercher_3">
+     <widget class="QPushButton" name="searchType">
       <property name="geometry">
        <rect>
         <x>400</x>
@@ -725,7 +785,19 @@ QTableView::item:focus{selection-background-color: yellow;}
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
       </property>
       <property name="text">
        <string>Search</string>
@@ -756,10 +828,10 @@ QTableView::item:focus{selection-background-color: yellow;}
 }</string>
       </property>
       <property name="text">
-       <string>Buyer to find </string>
+       <string>Start Date to find </string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="chercher_request">
+     <widget class="QLineEdit" name="startdatetosearch">
       <property name="geometry">
        <rect>
         <x>240</x>
@@ -773,7 +845,7 @@ QTableView::item:focus{selection-background-color: yellow;}
 </string>
       </property>
      </widget>
-     <widget class="QPushButton" name="rechercher_4">
+     <widget class="QPushButton" name="searchStartDate">
       <property name="geometry">
        <rect>
         <x>400</x>
@@ -783,7 +855,19 @@ QTableView::item:focus{selection-background-color: yellow;}
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
       </property>
       <property name="text">
        <string>Search</string>
@@ -1102,10 +1186,22 @@ QTableView::item:focus{selection-background-color: yellow;}
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
       </property>
       <property name="text">
-       <string>delete</string>
+       <string>Delete</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="le_num_modif">
@@ -1131,7 +1227,19 @@ QTableView::item:focus{selection-background-color: yellow;}
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
       </property>
       <property name="text">
        <string>Update</string>
@@ -1150,20 +1258,48 @@ QTableView::item:focus{selection-background-color: yellow;}
        <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="pb_read">
+      <property name="geometry">
+       <rect>
+        <x>570</x>
+        <y>540</y>
+        <width>93</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
+      </property>
+      <property name="text">
+       <string>Read</string>
+      </property>
+     </widget>
      <zorder>label_13</zorder>
      <zorder>tab_subscriptions</zorder>
-     <zorder>trier</zorder>
-     <zorder>tri_stock</zorder>
-     <zorder>trier_2</zorder>
-     <zorder>rechercher_2</zorder>
+     <zorder>sortByType</zorder>
+     <zorder>sortById</zorder>
+     <zorder>sortByPrice</zorder>
+     <zorder>searchnum</zorder>
      <zorder>label_22</zorder>
-     <zorder>le_num</zorder>
+     <zorder>numtosearch</zorder>
      <zorder>label_23</zorder>
-     <zorder>chercher_name</zorder>
-     <zorder>rechercher_3</zorder>
+     <zorder>typetosearch</zorder>
+     <zorder>searchType</zorder>
      <zorder>label_24</zorder>
-     <zorder>chercher_request</zorder>
-     <zorder>rechercher_4</zorder>
+     <zorder>startdatetosearch</zorder>
+     <zorder>searchStartDate</zorder>
      <zorder>label_8</zorder>
      <zorder>le_duration_modif</zorder>
      <zorder>le_edate_modif</zorder>
@@ -1181,6 +1317,7 @@ QTableView::item:focus{selection-background-color: yellow;}
      <zorder>le_num_modif</zorder>
      <zorder>pd_update</zorder>
      <zorder>comboBox</zorder>
+     <zorder>pb_read</zorder>
     </widget>
    </widget>
   </widget>
