--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -515,7 +515,7 @@ background-color : rgb(200,149,47);
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>1061</width>
+        <width>961</width>
         <height>251</height>
        </rect>
       </property>
@@ -1147,35 +1147,6 @@ background-color : rgb(200,149,47);
        <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_13">
-      <property name="geometry">
-       <rect>
-        <x>-325</x>
-        <y>-20</y>
-        <width>1431</width>
-        <height>701</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QLabel
-{
-	background-color: transparent;
-	color: #fff;
-	font-size: 14pt;
-	border-color: #000000;
-
-}</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="pixmap">
-       <pixmap>../../../Downloads/lovepik-financial-real-estate-black-gold-background-image_400084852.jpg</pixmap>
-      </property>
-      <property name="scaledContents">
-       <bool>true</bool>
-      </property>
-     </widget>
      <widget class="QPushButton" name="pb_delete">
       <property name="geometry">
        <rect>
@@ -1286,38 +1257,60 @@ background-color : rgb(200,149,47);
        <string>Read</string>
       </property>
      </widget>
-     <zorder>label_13</zorder>
-     <zorder>tab_subscriptions</zorder>
-     <zorder>sortByType</zorder>
-     <zorder>sortById</zorder>
-     <zorder>sortByPrice</zorder>
-     <zorder>searchnum</zorder>
-     <zorder>label_22</zorder>
-     <zorder>numtosearch</zorder>
-     <zorder>label_23</zorder>
-     <zorder>typetosearch</zorder>
-     <zorder>searchType</zorder>
-     <zorder>label_24</zorder>
-     <zorder>startdatetosearch</zorder>
-     <zorder>searchStartDate</zorder>
-     <zorder>label_8</zorder>
-     <zorder>le_duration_modif</zorder>
-     <zorder>le_edate_modif</zorder>
-     <zorder>le_sdate_modif</zorder>
-     <zorder>label_12</zorder>
-     <zorder>le_type_modif</zorder>
-     <zorder>label_20</zorder>
-     <zorder>label_21</zorder>
-     <zorder>label_10</zorder>
-     <zorder>le_price_modif</zorder>
-     <zorder>label_11</zorder>
-     <zorder>label_9</zorder>
-     <zorder>le_idBuy_modif</zorder>
-     <zorder>pb_delete</zorder>
-     <zorder>le_num_modif</zorder>
-     <zorder>pd_update</zorder>
-     <zorder>comboBox</zorder>
-     <zorder>pb_read</zorder>
+     <widget class="QPushButton" name="pbExport">
+      <property name="geometry">
+       <rect>
+        <x>500</x>
+        <y>280</y>
+        <width>93</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Export</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_3">
+     <attribute name="title">
+      <string>Page</string>
+     </attribute>
+     <widget class="QCustomPlot" name="plot" native="true">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>10</y>
+        <width>961</width>
+        <height>511</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QScrollBar" name="verticalScrollBar">
+      <property name="geometry">
+       <rect>
+        <x>1030</x>
+        <y>200</y>
+        <width>16</width>
+        <height>160</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="QScrollBar" name="horizontalScrollBar">
+      <property name="geometry">
+       <rect>
+        <x>470</x>
+        <y>570</y>
+        <width>160</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
@@ -1342,6 +1335,14 @@ background-color : rgb(200,149,47);
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>../../qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
